[gd_scene load_steps=27 format=3 uid="uid://cobe7t6pcdtkn"]

[ext_resource type="Script" path="res://29. Golem Boss - FSM/golem_boss.gd" id="1_gop2y"]
[ext_resource type="Texture2D" uid="uid://dmi3fr8c8nffy" path="res://29. Golem Boss - FSM/assets/PNG sheet/Character_sheet.png" id="1_pf68t"]
[ext_resource type="Texture2D" uid="uid://bf5hohm5ig0ap" path="res://29. Golem Boss - FSM/assets/weapon PNG/Laser_sheet.png" id="2_0g6tw"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/finite_state_machine.gd" id="3_hwsvm"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/states/idle.gd" id="5_2cytc"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/states/Follow.gd" id="6_xvhb5"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/states/MeleeAttack.gd" id="7_yvybm"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/states/HomingMissle.gd" id="8_cpt3f"]
[ext_resource type="PackedScene" uid="uid://ckd6rjq0hawi1" path="res://29. Golem Boss - FSM/arm_projectile.tscn" id="9_wkpqq"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/states/LaserBeam.gd" id="10_te0y2"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/states/Dash.gd" id="11_a574g"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/states/ArmorBuff.gd" id="11_b0dwr"]
[ext_resource type="Script" path="res://29. Golem Boss - FSM/Death.gd" id="13_dfdg3"]

[sub_resource type="Animation" id="Animation_cshwj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("UI/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("UI/Label:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Pivot/Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ljo36"]
length = 1.25001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70]
}

[sub_resource type="Animation" id="Animation_bhnes"]
resource_name = "boss_slained"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/Label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/Label:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kofjl"]
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_i5002"]
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 83]
}

[sub_resource type="Animation" id="Animation_3cd42"]
resource_name = "follow"
length = 0.80002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_6q4s2"]
length = 1.62501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/HomingMissle")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="Animation" id="Animation_2jqo6"]
resource_name = "idle"
length = 0.80002
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_nahpf"]
length = 2.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875, 2, 2.125, 2.25, 2.375, 2.5, 2.625, 2.75, 2.875, 3, 3.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 0, 14, 14, 14]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.375),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Pivot/Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_xb24r"]
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oh80k"]
_data = {
"RESET": SubResource("Animation_cshwj"),
"armor_buff": SubResource("Animation_ljo36"),
"boss_slained": SubResource("Animation_bhnes"),
"dash": SubResource("Animation_kofjl"),
"death": SubResource("Animation_i5002"),
"follow": SubResource("Animation_3cd42"),
"homing_missle": SubResource("Animation_6q4s2"),
"idle": SubResource("Animation_2jqo6"),
"laser_beam": SubResource("Animation_nahpf"),
"melee_attack": SubResource("Animation_xb24r")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_x8ifk"]
radius = 260.91

[sub_resource type="CircleShape2D" id="CircleShape2D_tqtv1"]
radius = 24.0208

[node name="GolemBoss" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_gop2y")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_pf68t")
hframes = 10
vframes = 10
frame = 50

[node name="Pivot" type="Node2D" parent="."]
position = Vector2(0, -17)

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
visible = false
position = Vector2(109, 17)
texture = ExtResource("2_0g6tw")
vframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oh80k")
}
autoplay = "idle"

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_x8ifk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_tqtv1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="UI"]
visible = false
custom_minimum_size = Vector2(200, 0)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -27.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
step = 1.0
value = 100.0

[node name="Label" type="Label" parent="UI/ProgressBar"]
layout_mode = 0
offset_top = -22.0
offset_right = 91.0
offset_bottom = 1.0
theme_override_font_sizes/font_size = 16
text = "Golem Boss"
vertical_alignment = 1

[node name="Label" type="Label" parent="UI"]
visible = false
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Boss Slayed"

[node name="Debug" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -51.0
offset_right = 32.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "debug"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("3_hwsvm")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("5_2cytc")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("6_xvhb5")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("7_yvybm")

[node name="HomingMissle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("8_cpt3f")
arm_node = ExtResource("9_wkpqq")

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_te0y2")

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_b0dwr")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_a574g")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_dfdg3")

[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
